--- a/src/java/com/epam/employees/resources/ApplicationResource.properties
+++ b/src/java/com/epam/employees/resources/ApplicationResource.properties
@@ -27,6 +27,7 @@ errors.token=Request could not be completed. Operation is not in sequence.
 header.title=Employees
 header.time = It took time
 header.time.ms = milliseconds
+header.go = GO!
 #-- Footer.text --
 footer.company.text=EPAM 2012. All rights reserved
 #-- Content --
