--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -96,6 +96,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Employees.war
+war.name=EmployeesR.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
