--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -13,6 +13,8 @@ libs.eclipselinkmodelgen.displayName=EclipseLink-ModelGen (JPA 2.0)
 libs.ejb3-persistence.classpath=\
     ${base}/ejb3-persistence/ejb3-persistence.jar
 libs.ejb3-persistence.displayName=Persistence
+libs.ejb3-persistence.javadoc=\
+    http://docs.jboss.org/hibernate/orm/3.5/api/
 libs.hibernate-support.classpath=\
     ${base}/hibernate-support/antlr-2.7.6.jar;\
     ${base}/hibernate-support/asm.jar;\
