--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,7 +56,9 @@ javac.classpath=\
     ${file.reference.jboss-logging-3.1.0.GA.jar}:\
     ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}:\
     ${libs.ejb3-persistence.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.jpa20-persistence.classpath}:\
+    ${libs.hibernate-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
