--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -15,6 +15,25 @@ libs.ejb3-persistence.classpath=\
 libs.ejb3-persistence.displayName=Persistence
 libs.ejb3-persistence.javadoc=\
     http://docs.jboss.org/hibernate/orm/3.5/api/
+libs.hibernate-persistence.classpath=\
+    ${base}/hibernate-persistence/antlr-2.7.6.jar;\
+    ${base}/hibernate-persistence/asm.jar;\
+    ${base}/hibernate-persistence/asm-attrs.jar;\
+    ${base}/hibernate-persistence/cglib-2.1.3.jar;\
+    ${base}/hibernate-persistence/commons-collections-2.1.1.jar;\
+    ${base}/hibernate-persistence/org-apache-commons-logging.jar;\
+    ${base}/hibernate-persistence/dom4j-1.6.1.jar;\
+    ${base}/hibernate-persistence/ehcache-1.2.3.jar;\
+    ${base}/hibernate-persistence/jdbc2_0-stdext.jar;\
+    ${base}/hibernate-persistence/jta.jar;\
+    ${base}/hibernate-persistence/hibernate3.jar;\
+    ${base}/hibernate-persistence/hibernate-tools.jar;\
+    ${base}/hibernate-persistence/hibernate-annotations.jar;\
+    ${base}/hibernate-persistence/hibernate-commons-annotations.jar;\
+    ${base}/hibernate-persistence/hibernate-entitymanager.jar;\
+    ${base}/hibernate-persistence/javassist.jar;\
+    ${base}/hibernate-persistence/ejb3-persistence.jar
+libs.hibernate-persistence.displayName=Hibernate JPA
 libs.hibernate-support.classpath=\
     ${base}/hibernate-support/antlr-2.7.6.jar;\
     ${base}/hibernate-support/asm.jar;\
@@ -40,6 +59,9 @@ libs.javaee-endorsed-api-6.0.classpath=\
 libs.javaee-endorsed-api-6.0.displayName=Java EE 6 Endorsed API Library
 libs.javaee-endorsed-api-6.0.javadoc=\
     ${base}/javaee-endorsed-api-6.0/javaee6-doc-api.zip
+libs.jpa20-persistence.classpath=\
+    ${base}/jpa20-persistence/javax.persistence-2.0.3.jar
+libs.jpa20-persistence.displayName=Persistence (JPA 2.0)
 libs.jstl11.classpath=\
     ${base}/jstl11/standard.jar;\
     ${base}/jstl11/jstl.jar
