--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,6 @@ endorsed.classpath=\
 excludes=
 file.reference.antlr-2.7.7.jar=lib/antlr-2.7.7.jar
 file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
-file.reference.hibernate-commons-annotations-4.0.1.Final.jar=lib/hibernate-commons-annotations-4.0.1.Final.jar
-file.reference.hibernate-core-4.1.7.Final.jar=lib/hibernate-core-4.1.7.Final.jar
 file.reference.javassist-3.15.0-GA.jar=lib/javassist-3.15.0-GA.jar
 file.reference.jboss-logging-3.1.0.GA.jar=lib/jboss-logging-3.1.0.GA.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=lib/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
@@ -50,14 +48,12 @@ javac.classpath=\
     ${file.reference.ojdbc6.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.hibernate-commons-annotations-4.0.1.Final.jar}:\
-    ${file.reference.hibernate-core-4.1.7.Final.jar}:\
     ${file.reference.javassist-3.15.0-GA.jar}:\
+    ${libs.hibernate-support.classpath}:\
     ${file.reference.jboss-logging-3.1.0.GA.jar}:\
     ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}:\
-    ${libs.ejb3-persistence.classpath}:\
-    ${libs.eclipselink.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
+    ${libs.ejb3-persistence.classpath}:\
     ${libs.hibernate-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -87,7 +83,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=default_platform
+platform.active=JDK_1.7_U7
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
