--- a/src/java/com/epam/employees/resources/ApplicationResource.properties
+++ b/src/java/com/epam/employees/resources/ApplicationResource.properties
@@ -28,6 +28,9 @@ header.title=Employees
 header.time = It took time
 header.time.ms = milliseconds
 header.go = GO!
+header.size = Page size:
+header.page = Page
+header.of = of 
 #-- Footer.text --
 footer.company.text=EPAM 2012. All rights reserved
 #-- Content --
@@ -41,5 +44,6 @@ content.text.city= city
 content.text.country=country
 content.text.count=count
 content.text.position=position
+
 
 
