--- a/src/java/com/epam/employees/resources/ApplicationResource.properties
+++ b/src/java/com/epam/employees/resources/ApplicationResource.properties
@@ -44,6 +44,9 @@ content.text.city= city
 content.text.country=country
 content.text.count=count
 content.text.position=position
+#--Error Messages--
+error.message.empty=empty field
+error.message.format=wrong format
 
 
 
